--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "document-parser",
   "private": true,
   "version": "0.0.0",
+  "homepage": "http://172.31.1.200:5000",
   "type": "module",
   "scripts": {
     "dev": "vite",
